examples/test/testpolicy2704.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2704
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key1: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value19
          key15: value24
          key0: value13
      podSelector:
        matchLabels:
          key42: value46
          key0: value38
          key36: value38
